--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "keywords": ["mongodb", "database", "ODM"],
   "dependencies": {
-    "mongodb": "0.9.9-2",
-    "resourceful": "https://github.com/fent/resourceful/tarball/master"
+    "mongodb": "0.9.x",
+    "resourceful": "0.2.x"
   },
   "devDependencies": {
-    "mocha" : "0.8.x",
-    "should": "0.3.2",
+    "mocha" : "1.3.x",
+    "should": "0.6.x",
     "utile": "0.0.10"
   },
   "scripts": {
