--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "test"  : "mocha --ui bdd --reporter spec --require should test/*-test.js"
   },
+  "license": "Apache 2.0",
   "engines": { "node": ">= 0.4.0" },
   "main": "./lib/resourceful-mongo"
 }
